--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.1",
+    "@types/pg": "^8.15.5",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
@@ -34,7 +36,9 @@
     "jest": "^30.0.5",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
+    "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "redis": "^5.8.0",
     "speakeasy": "^2.0.0",
